# mixinject

./: .gitignore  .mcp.json  CONTRIBUTING.md  DESIGN.md  README.md  flake.nix  mixin.schema.json  package.json  pyproject.toml  specification.md  test_debug.py
inheritance-calculus/: inheritance-calculus.tex  mixin_totality.tex  preprint.tex  references.bib  submission.tex
mixin-calculus/: mixin-calculus.bib  mixin-calculus.tex  overlay-calculus.tex
modules/: jupyter.nix  lib.nix  python.nix  texlive.nix
overlay-calculus/: overlay-calculus.tex  references.bib
overlay-language/: README.md  pyproject.toml
overlay-language/docs/: conf.py  index.rst  overlay-language-tutorial.rst  tutorial.rst
overlay-language/src/overlay/language/: __init__.py  _core.py  _mixin_directory.py  _mixin_parser.py  interned_linked_list.py  mixin_directory.py  mixin_parser.py  runtime.py
overlay-library/: pyproject.toml
stdlib/: stdlib.mixin.yaml
tests/: ArithmeticTest.overlay.yaml  ArithmeticTest.oyaml  BinNatArithmeticTest.overlay.yaml  BinNatArithmeticTest.oyaml  CartesianProductTest.oyaml  FibonacciLibrary.oyaml  FibonacciTest.oyaml  arithmetic_test.mixin.yaml  conftest.py  snapshot.json  test_bin_nat_arithmetic.py  test_cartesian_product.py  test_church_boolean.py  test_circular_lazy.py  test_debug.py  test_fibonacci.py  test_fibonacci_cartesian_product.py  test_get_symbol.py  test_interned_linked_list.py  test_mixin_parser.py  test_mixinject.py  test_multi_module_composition.py  test_nat_arithmetic.py  test_nested_lexical_scope.py  test_outer_vs_lexical_outer.py  test_v2.py  (+7 more)
(+54 files in other folders)
