[build-system]
requires = ["uv_build>=0.10.2,<0.11"]
build-backend = "uv_build"

[project]
name = "overlay.language"
version = "0.1.0"
description = "Overlay Language runtime — a composition-based programming language built on Overlay-Calculus"
license = "MIT"
requires-python = ">=3.13"
authors = [
    {name = "Yang, Bo", email = "yang-bo@yang-bo.com"},
]
dependencies = [
    "pyyaml>=6.0.3",
]

[tool.uv.build-backend]
module-name = "overlay.language"

[project.urls]
Repository = "https://github.com/Atry/overlay"
